src/objects/cds_obj_Violations__c.object
<CustomObject>
    <fields>
        <fullName>CourtAppearance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court appearance</label>
        <referenceTo>cds_obj_CourtAppearances__c</referenceTo>
        <relationshipLabel>violations</relationshipLabel>
        <relationshipName>violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_Date__c</fullName>
        <label>Violation Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_description__c</fullName>
        <label>Violation description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>violation</label>
    <nameField>
        <label>violation	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>